--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
+    "react-toastify": "^5.5.0",
     "reactstrap": "^8.4.0",
     "style-loader": "^1.1.2",
     "webpack": "^4.41.4",
